# wall-friend

./: .travis.yml  CMakeLists.txt  README.md  RESOURCES.md  build_simulator.sh  platformio.ini
cmake-fetch-content/: .gitrepo
lib/arduino-audio-manager/: arduino-audio-manager.cc  arduino-audio-manager.h
lib/arduino-led-manager/: arduino-led-manager.cc  arduino-led-manager.h
lib/audio-manager/: audio-manager.h
lib/brain/: brain.cc  brain.h
lib/debug/: debug.cc  debug.h
lib/led-manager/: led-manager.h
lib/simulator/: simulator-audio-manager.cc  simulator-audio-manager.h  simulator-led-manager.cc  simulator-led-manager.h  simulator.cc
src/: wall-friend.ino
